<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_gacha">

    <fragment
        android:id="@+id/navigation_messenger"
        android:name="com.example.lab3kotlinchat.ui.messenger.MessengerFragment"
        android:label="@string/text_messenger"
        tools:layout="@layout/fragment_messenger" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.lab3kotlinchat.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_gacha"
        android:name="com.example.lab3kotlinchat.ui.gacha.GachaFragment"
        android:label="@string/gacha"
        tools:layout="@layout/fragment_gacha" />

</navigation>