<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp">

    <ImageView
        android:id="@+id/imgPokemon"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginVertical="10dp"
        android:adjustViewBounds="true"

        android:background="@drawable/their_message"
        android:paddingHorizontal="10dp"

        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokemon_name" />

    <TextView
        android:id="@+id/pokemon_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/pokemon_name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgPokemon">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgPokemon">

            <TextView
                android:id="@+id/hp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:background="@drawable/rectangle"
                android:drawableLeft="@drawable/baseline_favorite_border_24"
                android:paddingHorizontal="10dp"
                android:text="@string/hp" />

            <TextView
                android:id="@+id/attack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/rectangle"
                android:backgroundTint="@color/blue_100"
                android:drawableLeft="@drawable/baseline_fitness_center_24"
                android:paddingHorizontal="10dp"

                android:text="@string/attack" />

            <TextView
                android:id="@+id/defence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/rectangle"
                android:backgroundTint="@color/gray_100"
                android:drawableLeft="@drawable/baseline_castle_24"
                android:paddingHorizontal="10dp"

                android:text="@string/defence" />

            <TextView
                android:id="@+id/speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/rectangle"
                android:backgroundTint="@color/aqua_100"
                android:drawableLeft="@drawable/baseline_air_24"
                android:paddingHorizontal="10dp"

                android:text="@string/speed" />


        </LinearLayout>
    </HorizontalScrollView>


    <TextView
        android:id="@+id/stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/stats"
        android:textSize="24sp"
        app:drawableLeftCompat="@drawable/baseline_hub_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
</androidx.constraintlayout.widget.ConstraintLayout>
